Update minor text changes

--- a/hackathon/webapp/templates/webapp/aboutus.html
+++ b/hackathon/webapp/templates/webapp/aboutus.html
@@ -82,7 +82,7 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-lg-8 aboutus-content">
-					<p>Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI (machine learning, deep learning, probabilistic reasoning etc.), application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry.  
+					<p>Symbiosis Center for Applied Artificial Intelligence (SCAAI), was established to develop novel techniques in various domains of AI (machine learning, deep learning, probabilistic reasoning etc.), application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry.
 					</p>
 				</div>
 		</div>
