--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -198,7 +198,7 @@
                             <div class="card-body">
                                 <img src="{% static 'webapp/imgs/symbiosislogo.png' %}" class="organizerImage">
                                 <p class="card-text" id="card-text-info">Symbiosis Center for Applied Artificial
-                                    Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was
+                                    Intelligence (SCAAI) was
                                     established to develop novel techniques in various domains of AI, application of
                                     these algorithms to a variety of problems specifically focusing in two domains
                                     namely healthcare and robotics and translation of the above two aims into novel
