--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -32,6 +32,10 @@
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
             crossorigin="anonymous"></script>
     <script src="../../static/webapp/js/jquery.scoped.js"></script>
+
+
+    <!-- Scroll Reveal -->
+    <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.js"></script>
     <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
 </head>
 
@@ -107,23 +111,23 @@
     <div class="page-info">
         <div class="container" style="margin-top: 15px;">
             <div class="row text-center">
-                <div class="col-md-6 col-lg-3 participateCard">
+                <div class="col-md-6 col-lg-3 participateCard scroll-animate-1">
                     <img src="{% static 'webapp/imgs/idea.svg' %}" id="participateImage">
                     <h4 id="participateTitle">Get Inspired</h4>
                     <p id="participateInfo">Code with the best developers and designers from all around the country.</p>
                 </div>
-                <div class="col-md-6 col-lg-3 participateCard">
+                <div class="col-md-6 col-lg-3 participateCard scroll-animate-2">
                     <img src="{% static 'webapp/imgs/boss.svg' %}" id="participateImage">
                     <h4 id="participateTitle">Meet New Faces</h4>
                     <p id="participateInfo">Interact with super creative minds and increase your network.</p>
                 </div>
-                <div class="col-md-6 col-lg-3 participateCard">
+                <div class="col-md-6 col-lg-3 participateCard scroll-animate-3">
                     <img src="{% static 'webapp/imgs/data.svg' %}" id="participateImage">
                     <h4 id="participateTitle">Latest Tech</h4>
                     <p id="participateInfo">Get priceless insights from eminent speakers and mentors from one of the
                         leading companies and startups in the space.</p>
                 </div>
-                <div class="col-md-6 col-lg-3 participateCard">
+                <div class="col-md-6 col-lg-3 participateCard scroll-animate-4">
                     <img src="{% static 'webapp/imgs/gold-medal.svg' %}" id="participateImage">
                     <h4 id="participateTitle">Prizes To Be Won</h4>
                     <p id="participateInfo">Amazing cash prizes worth Rs.6,00,000* to be won and a lifetime opportunity
@@ -305,7 +309,8 @@
             <div class="row text-center justify-content-between">
 
                 <div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
-                    <div class="judgesImage" style="background-image: url('../../static/webapp/imgs/balaji_compressed.jpg');">
+                    <div class="judgesImage"
+                         style="background-image: url('../../static/webapp/imgs/balaji_compressed.jpg');">
                         <div class="judgeGradient">
                             <div class="judgeInfoBox">
                                 <p class="judgeInfo">P B Balaji</p>
@@ -325,7 +330,6 @@
                         </div>
                     </div>
                 </div>
-
 
 
                 <div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
@@ -394,10 +398,10 @@
 
                         <ul>
                             <li class="timeline-prev-button"><a href="#0"
-                                                          class="text-replace cd-h-timeline__navigation cd-h-timeline__navigation--prev cd-h-timeline__navigation--inactive">Prev</a>
+                                                                class="text-replace cd-h-timeline__navigation cd-h-timeline__navigation--prev cd-h-timeline__navigation--inactive">Prev</a>
                             </li>
                             <li class="timeline-next-button"><a href="#0"
-                                                          class="text-replace cd-h-timeline__navigation cd-h-timeline__navigation--next">Next</a>
+                                                                class="text-replace cd-h-timeline__navigation cd-h-timeline__navigation--next">Next</a>
                             </li>
                         </ul>
                     </div> <!-- .cd-h-timeline__container -->
@@ -714,6 +718,28 @@
 </div>
 
 {% include 'webapp/footer.html' %}
+
+<!-- Scroll Reveal JS -->
+<script>
+    let slideUp = {
+        distance: '20%',
+        origin: 'bottom',
+        opacity: 0,
+        duration: 500
+    };
+
+    let slideDown = {
+        distance: '20%',
+        origin: 'top',
+        opacity: 0,
+        duration: 500
+    };
+
+    ScrollReveal().reveal('.scroll-animate-1', slideUp);
+    ScrollReveal().reveal('.scroll-animate-2', slideDown);
+    ScrollReveal().reveal('.scroll-animate-3', slideUp);
+    ScrollReveal().reveal('.scroll-animate-4', slideDown);
+</script>
 
 <!-- Bootstrap JS -->
 <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
