--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -617,6 +617,22 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="card">
+				                <div class="card-header card-header-bg" id="headingSix">
+				                  <div class="header-title" data-toggle="collapse" data-target="#questionSix" aria-expanded="true" aria-controls="collapseOne">
+				                    <i class="lni-pencil"></i> Who can be a mentor?
+
+				                  </div>
+				                </div>
+				                <div id="questionSix" class="collapse" aria-labelledby="headingSix" data-parent="#question" style="">
+				                  <div class="card-body">
+				                  	<ul style="margin-bottom: 0;">
+				                  		<li style="list-style: circle;">For Individuals, mentor can be a Faculty/PhD Student/Final year student registering from a particular university.</li>
+				                  		<li style="list-style: circle;">For Startups, mentor can be the founder member or a person guiding the solution architecture who works in the same startup company.</li>
+				                  	</ul>
+				                  </div>
+				                </div>
+				              </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
