Fixed Individual Form Registration issue

--- a/hackathon/webapp/templates/webapp/footer.html
+++ b/hackathon/webapp/templates/webapp/footer.html
@@ -39,10 +39,10 @@
 					<p style="margin-bottom: 0; text-align: center;"><a href="{% url 'privacy_policy' %}" id="privacy">Privacy policy</a></p>
 				</div>
 			</div>
-			<hr>
+			<hr style="opacity: 0;">
 			<div class="row" id="footer-note">
 				<div class="col-12 text-center">
-					<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
+                    <p style="color: #FFFFFFCC">Designed by SIT (Final Year) Students <a style="text-decoration: none; color: inherit" href="https://www.linkedin.com/in/arpan-sriv/">Arpan Srivastava</a> & <a style="text-decoration: none; color: inherit" href="https://www.linkedin.com/in/ryan-miranda-382217173/">Ryan Miranda</a>.</p>
 				</div>
 			</div>
 		</div>
