Added Hema Karande

--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -399,10 +399,10 @@
 					        </div>
 					    </div>
 					    <div class="col-md-6 col-lg-3" style="padding-right: 20px; padding-left: 20px">
-					        <div class="judgesImage" style="background-image: url('../../static/webapp/imgs/Nishant_Tikekar.jpg');">
+					        <div class="judgesImage" style="background-image: url('../../static/webapp/imgs/hema-karande.jpg');">
 					            <div class="judgeGradient">
 					                <div class="judgeInfoBox">
-					                	<p class="judgeInfo">Nishant Tikekar</p>
+					                	<p class="judgeInfo">Hema Karande</p>
 					        	       	<!-- <p class="judgeInfoDesignation">Chief Financial Officer, Tata Motors Limited</p> -->
 					                </div>
 					            </div>
