Updated Settings for windows platform

--- a/hackathon/solutions/templates/solutions/upload_login.html
+++ b/hackathon/solutions/templates/solutions/upload_login.html
@@ -7,7 +7,8 @@
         
         <form action="{% url 'upload_solution' %}" method="post">
             {% csrf_token %}
-            <input name="upload_key" />
+            <input name="email" />
+            <input name="password" />
             <button type="submit">Submit</button>
         </form>
 
