--- a/hackathon/solutions/templates/solutions/upload_login.html
+++ b/hackathon/solutions/templates/solutions/upload_login.html
@@ -1,16 +1,91 @@
 <html>
     <head>
-        <title>Login to upload solution</title>
+        <title>AIHackathon - Login to upload solution</title>
+        {% load static %}
+        <link rel="shortcut icon" type="image/png" href="{% static 'webapp/imgs/artificial-intelligence.png' %}"/>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS-->
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Jquery Toast CSS -->
+        <link href="{% static 'webapp/jquery.toast.css' %}" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="../../static/webapp/styles.css">
+        <!-- Noto Sans Font -->
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+        <!-- PT Mono Font -->
+        <link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet">
+        <!-- Open Sans Font -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+        <!-- PT Sans Font -->
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+        <!-- Oxygen Mono Font -->
+        <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono&display=swap" rel="stylesheet">
+        <!-- Overpass Mono Font -->
+        <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
+        <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
+        <!-- Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.js"
+                integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+                crossorigin="anonymous"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                crossorigin="anonymous"></script> -->
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
 
     <body>
+        <!-- NAVBAR -->
+        {% include "webapp/navbar.html" %}
         
-        <form action="{% url 'upload_solution' %}" method="post">
+       <!--  <form action="{% url 'upload_solution' %}" method="post">
             {% csrf_token %}
-            <input name="email" />
-            <input name="password" />
+            <input name="upload_key" />
             <button type="submit">Submit</button>
-        </form>
+        </form> -->
+
+        <div class="registration-box">
+            <h1 id="startupRegistrationTitle">Login</h1>
+        </div>
+
+        <div class="container form-custom">
+            <form method="POST" id="loginForm">
+                {% csrf_token %}
+
+                <!-- <input type="hidden" id="thank-you-url" data-url="{% url 'thank_you' %}" />
+                <input type="hidden" id="poll-url" data-url="{% url 'poll_url' %}" />
+                <input type="hidden" id="progress-id-input" name="progress-id-input" value="{{ progress_id }}" />
+                <input type="hidden" id="submit-url" name="hidden-individual-register-url" value="{% url 'registration_individual' %}" /> -->
+
+                <div class="row">
+                    <div class="col-sm-12 col-lg-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="teamEmail" placeholder="Team Email" required name="teamEmail">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12 col-lg-12">
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="password" placeholder="Password" required name="password">
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary submitBtn" onclick="submitForm()">Submit</button>
+            </form>
+        </div>
+
+        {% include "webapp/footer.html" %}
+
+    <script src="{% static 'webapp/js/jquery.toast.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="../../static/webapp/js/form.js"></script>
 
     </body>
 </html>
