--- a/hackathon/solutions/templates/solutions/upload_login.html
+++ b/hackathon/solutions/templates/solutions/upload_login.html
@@ -53,7 +53,7 @@
             <h1 id="startupRegistrationTitle">Login</h1>
         </div>
 
-        <div class="container form-custom">
+        <div class="container form-custom" style="margin-bottom: 30px;">
             <form method="POST" id="loginForm">
                 {% csrf_token %}
 
