--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -48,7 +48,7 @@
         <h1 id="startupRegistrationTitle" class="teamNameTitle">Team Name</h1>
     </div>
 
- 	<div class="container inner-form-custom">
+ 	<div class="container inner-form-custom" style="margin-bottom: 30px;">
  		<div class="row">
  			<div class="col-lg-3 col-sm-6">
                             <form>
@@ -477,8 +477,9 @@
 	        	<button type="submit" class="btn btn-primary submitBtn" onclick="submitForm()">Submit</button>
 	        </form>
 	    </div>
-    
     </div>
+
+    {% include "webapp/footer.html" %}
 
 </body>
 </html>
