--- a/hackathon/solutions/templates/solutions/upload_login.html
+++ b/hackathon/solutions/templates/solutions/upload_login.html
@@ -55,43 +55,57 @@
         </form> -->
 
 <div class="registration-box">
-    <h1 id="startupRegistrationTitle">Login</h1>
-</div>
+    <h1 id="startupRegistrationTitle">Team Login</h1>
 
-<div class="container form-custom">
-    <form method="POST" id="loginForm">
-        {% csrf_token %}
 
-        <!-- <input type="hidden" id="thank-you-url" data-url="{% url 'thank_you' %}" />
+    <div class="container form-custom">
+
+        <form method='post' action="{% url 'login_hackathon' %}" id="loginForm">
+            {% csrf_token %}
+
+            <!-- <input type="hidden" id="thank-you-url" data-url="{% url 'thank_you' %}" />
                 <input type="hidden" id="poll-url" data-url="{% url 'poll_url' %}" />
                 <input type="hidden" id="progress-id-input" name="progress-id-input" value="{{ progress_id }}" />
                 <input type="hidden" id="submit-url" name="hidden-individual-register-url" value="{% url 'registration_individual' %}" /> -->
 
-        <div class="row">
-            <div class="col-sm-12 col-lg-12">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="teamEmail" placeholder="Team Email" required
-                           name="teamEmail">
+            <div class="row">
+                <div class="col-sm-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="teamEmail" placeholder="Team Email" required
+                               name="teamEmail">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm-12 col-lg-12">
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder="Password" required
-                           name="password">
+            <div class="row">
+                <div class="col-sm-12 col-lg-12">
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="password" placeholder="Password" required
+                               name="password">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <button type="submit" class="btn btn-primary submitBtn" onclick="submitForm()">Submit</button>
-    </form>
+            <button type="submit" class="btn btn-primary submitBtn" onclick="submitForm()">Submit</button>
+        </form>
+    </div>
+
 </div>
 
 {% include "webapp/footer.html" %}
 
 <script src="{% static 'webapp/js/jquery.toast.js' %}" type="text/javascript"></script>
+<script>
+    {% if message %}
+        $.toast({
+            heading: 'Error',
+            text: '{{ message }}',
+            icon: 'error',
+            hideAfter: 3000
+        });
+    {% endif %}
+
+</script>
 
 </body>
 </html>
