--- a/hackathon/solutions/templates/solutions/upload_login.html
+++ b/hackathon/solutions/templates/solutions/upload_login.html
@@ -47,7 +47,7 @@
 <body>
 {% include "webapp/navbar.html" %}
 
-<div class="registration-box">
+<div class="registration-box" style="margin-bottom: 100px">
     <h1 id="startupRegistrationTitle">Login</h1>
 
 
