--- a/hackathon/webapp/templates/webapp/navbar.html
+++ b/hackathon/webapp/templates/webapp/navbar.html
@@ -1,46 +1,58 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top navbar-default">
     <div class="logoBar">
-			<div class="container-fluid">
-				<div class="row" style="justify-content: space-around; padding-top: 10px;">
-					<div class="col-3" style="text-align: start;">
-						<a href="https://www.tatamotors.com/">
-							<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="TataMotorsLogo"">							
-						</a>
-					</div>
-					<div class="col-3" id="sitLogo" style="text-align: center;">
-						<a href="https://www.sitpune.edu.in/">
-							<img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" style="height: 50px;">
-						</a>
-					</div>
-					<div class="col-3" style="text-align: end;" id="tataLogoBox">
-						<a href="https://www.tata.com/">
-							<img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="TataLogo">
-						</a>
-					</div>
-					<button class="navbar-toggler col-1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</div>
-				<div class="row" style="margin-top: 5px;" id="menuLinks">
-					<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-					    <ul class="navbar-nav navbar-custom">
-					      <li class="nav-item nav-item-link">
-					        <a class="nav-link" id="link-color" href="{% url 'index' %}">Home</a>
-					      </li>
-					      <li class="nav-item nav-item-link">
-					        <a class="nav-link" id="link-color" href="{% url 'about_us' %}">About Us</a>
-					      </li>
-					      <li class="nav-item nav-item-link">
-					        <a class="nav-link" id="link-color" href="{% url 'contact_us' %}">Contact Us</a>
-					      </li>
-					    </ul>
-					</div>	
-				</div>
-			</div>
-		</div>
-    <div class="progress-bar-custom" style="width: 0%;height: 5px;background: linear-gradient(to right, #ee0979, #ff6a00);position: absolute;bottom: -5px;left: 0;-webkit-border-radius: 16px !important;-moz-border-radius: 16px !important;border-radius: 16px !important;">
+        <div class="container-fluid">
+            <div class="row" style="justify-content: space-around; padding-top: 10px;">
+                <div class="col-3" style="text-align: start;">
+                    <a href="https://www.tatamotors.com/">
+                        <img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="TataMotorsLogo"">
+                    </a>
+                </div>
+                <div class="col-3" id="sitLogo" style="text-align: center;">
+                    <a href="https://www.sitpune.edu.in/">
+                        <img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" style="height: 50px;">
+                    </a>
+                </div>
+                <div class="col-3" style="text-align: end;" id="tataLogoBox">
+                    <a href="https://www.tata.com/">
+                        <img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="TataLogo">
+                    </a>
+                </div>
+                <button class="navbar-toggler col-1" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="row" style="margin-top: 5px;" id="menuLinks">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav navbar-custom">
+                        <li class="nav-item nav-item-link">
+                            <a class="nav-link" id="link-color" href="{% url 'index' %}">Home</a>
+                        </li>
+                        <li class="nav-item nav-item-link">
+                            <a class="nav-link" id="link-color" href="{% url 'about_us' %}">About Us</a>
+                        </li>
+                        <li class="nav-item nav-item-link">
+                            <a class="nav-link" id="link-color" href="{% url 'contact_us' %}">Contact Us</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item nav-item-link">
+                                <a class="nav-link" id="link-color" href="{% url 'logout_hackathon' %}">Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item nav-item-link">
+                                <a class="nav-link" id="link-color" href="{% url 'login_hackathon' %}">Login</a>
+                            </li>
+                        {% endif %}
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="progress-bar-custom"
+         style="width: 0%;height: 5px;background: linear-gradient(to right, #ee0979, #ff6a00);position: absolute;bottom: -5px;left: 0;-webkit-border-radius: 16px !important;-moz-border-radius: 16px !important;border-radius: 16px !important;">
 
     </div>
-	</nav>
+</nav>
 
