--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -134,7 +134,7 @@
 
 <!-- </div> -->
 
-<div class="container">
+<div class="container-fluid">
     <div class="registration-box" style="margin-bottom: 100px">
         <h2 id="startupRegistrationTitle" class="uploadText" style="margin-bottom: 30px;">Upload Solutions</h2>
         <form action="#" id="files-upload-form">
@@ -165,6 +165,16 @@
                 </div>
                 <div class="file-uploaded-status">
                     Status: {{ file_status.information }}
+                </div>
+            </div>
+            <div class="input-field-form-div">
+                <div class="file-info">Presentation File (Status: {{ file_status.ppt }})</div>
+                <div class="file-input-wrapper">
+
+                    <input type="file" class="form-control-file" id="file3" name="ppt_file" required>
+                </div>
+                <div class="file-uploaded-status">
+                    Status: {{ file_status.ppt }}
                 </div>
             </div>
 
@@ -259,6 +269,7 @@
             let dockerFile = $(`input[name='docker_file']`).prop('files')[0];
             let progFile = $(`input[name='prog_file']`).prop('files')[0];
             let infoFile = $(`input[name='info_file']`).prop('files')[0];
+            let pptFile = $(`input[name='ppt_file']`).prop('files')[0];
 
             if (dockerFile.name !== 'Dockerfile') {
                 showError('Selected Dockerfile is invalid. The name of the file should be "Dockerfile".');
@@ -274,6 +285,7 @@
             uploadFile(dockerFile, 'docker');
             uploadFile(progFile, 'program');
             uploadFile(infoFile, 'information');
+            uploadFile(pptFile, 'ppt');
 
             window.setTimeout(function () {
                 alert("Uploaded Successfully.")
