--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -68,7 +68,7 @@
                             <p id="initiativeDesc">Tata Motors, Symbiosis Center for Applied Artificial Intelligence
                                 (SCAAI) and Symbiosis Institute of Technology, Pune</p>
                         </div>
-                        <a href="{% url 'registration' %}" class="registerBtn" data-hover="ITS FREE!!"><span>Register Now</span></a>
+                        <a href="#" class="registerBtn" data-hover="" disabled><span>Registrations Closed</span></a>
                     </div>
                 </div>
                 <div class="col-md-12 col-lg-6 img-div order-1 order-lg-2">
