--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -372,7 +372,7 @@
 
                         <div id="upload-zone" class="problem-02">
                             <!-- Uploader Dropzone -->
-                            <form action="upload.php" id="zdrop" class="fileuploader center-align">
+                            <form action="#" id="zdrop" class="fileuploader center-align">
                                 <i class="lni-cloud-upload size-lg" id="upload-label"></i>
                                 <div class="tittle">Click the button or drop anywhere to upload the files.</div>
                             </form>
