Send mail function written

--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -218,7 +218,7 @@
                                         <div class="faq-answer">You can refer to some of the libraries or datasets from
                                             internet which will help for intent identification from conversations. Some
                                             sample audio clips for different categories are provided in the
-                                            <a href="#" style="color: red">link</a> can be used as reference to
+                                            <a href="https://ai-hackathon-upload.s3.ap-south-1.amazonaws.com/public/data.zip" style="color: red">link</a> can be used as reference to
                                             understand the data required. However, you can use any other technology or
                                             methodology for creating dataset.
                                         </div>
@@ -461,14 +461,9 @@
                 </div>
 
             </div>
-            {#            <div class="modal-footer">#}
-            {#                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>#}
-            {#                <button type="button" class="btn btn-primary">Save changes</button>#}
-            {#            </div>#}
         </div>
     </div>
 </div>
-
 
 {% include "webapp/footer.html" %}
 
