Send mail function written and create member function writter

--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -74,7 +74,7 @@
                                     {% endif %}
                                 </div>
                                 <div class="member-name">
-                                    {{ member.first_name }} {{ member.last_name }} ({{ member.dob }})
+                                    {{ member.first_name }} {{ member.last_name }}
                                 </div>
                                 <div class="member-college">
                                     {{ member.university }}
