Updated bs changes.

--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -110,21 +110,18 @@
                             <ol>
                                 <li>You are required to upload three files, namely:
                                     <ol style='margin-top: 4px; list-style: lower-alpha'>
-                                        <li>Dockerfile: The information of which is shared over the email sent to you.
+                                        <li>Dockerfile: The user guide for creating the Dockerfile has been provided in the email sent to you. (Welcome to AI Hackathon)
                                         </li>
-                                        <li>Program File: The source code of the program you made. (Can be in any
-                                            language you prefer)
+                                        <li>Program File: Upload your source code (single file or zip of your source code folder). Make sure to upload all files, including training codes.
                                         </li>
-                                        <li>Presentation: A ppt about your how to thought your way through the problem
-                                            and what steps you took to solve it.
+                                        <li>Presentation: A presentation detailing the approach used for design and development of the solution. You need to strictly follow the format given in the welcome mail.
                                         </li>
                                     </ol>
                                 </li>
-                                <li>You can upload solutions for both the problem sets. Make sure you choose the problem
-                                    number while uploading the solution.
+                                <li>You can upload solutions for both the problems. Please ensure you select the correct problem statement while uploading the solution.
                                 </li>
                                 <li>To upload a newer version of the solution, you can re-upload all the files of a
-                                    particular problem statement. Your solution will automatically be over-written.
+                                    particular problem statement. Your previous solution will automatically be over-written.
                                 </li>
                             </ol>
 
