Added zip to prog file types

--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -506,6 +506,8 @@
                         return 'ppt'
                     case 'pdf':
                         return 'ppt'
+                    case 'zip':
+                        return 'prog'
                     default:
                         return 'invalid'
                 }
