--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -110,18 +110,24 @@
                             <ol>
                                 <li>You are required to upload three files, namely:
                                     <ol style='margin-top: 4px; list-style: lower-alpha'>
-                                        <li>Dockerfile: The user guide for creating the Dockerfile has been provided in the email sent to you. (Welcome to AI Hackathon)
+                                        <li>Dockerfile: The user guide for creating the Dockerfile has been provided in
+                                            the email sent to you. (Welcome to AI Hackathon)
                                         </li>
-                                        <li>Program File: Upload your source code (single file or zip of your source code folder). Make sure to upload all files, including training codes.
+                                        <li>Program File: Upload your source code (single file or zip of your source
+                                            code folder). Make sure to upload all files, including training codes.
                                         </li>
-                                        <li>Presentation: A presentation detailing the approach used for design and development of the solution. You need to strictly follow the format given in the welcome mail.
+                                        <li>Presentation: A presentation detailing the approach used for design and
+                                            development of the solution. You need to strictly follow the format given in
+                                            the welcome mail.
                                         </li>
                                     </ol>
                                 </li>
-                                <li>You can upload solutions for both the problems. Please ensure you select the correct problem statement while uploading the solution.
+                                <li>You can upload solutions for both the problems. Please ensure you select the correct
+                                    problem statement while uploading the solution.
                                 </li>
                                 <li>To upload a newer version of the solution, you can re-upload all the files of a
-                                    particular problem statement. Your previous solution will automatically be over-written.
+                                    particular problem statement. Your previous solution will automatically be
+                                    over-written.
                                 </li>
                             </ol>
 
@@ -215,7 +221,8 @@
                                         <div class="faq-answer">You can refer to some of the libraries or datasets from
                                             internet which will help for intent identification from conversations. Some
                                             sample audio clips for different categories are provided in the
-                                            <a href="https://ai-hackathon-upload.s3.ap-south-1.amazonaws.com/public/data.zip" style="color: red">link</a> can be used as reference to
+                                            <a href="https://ai-hackathon-upload.s3.ap-south-1.amazonaws.com/public/data.zip"
+                                               style="color: red">link</a> can be used as reference to
                                             understand the data required. However, you can use any other technology or
                                             methodology for creating dataset.
                                         </div>
@@ -326,7 +333,8 @@
                                             <div class='file-upload-preview-name'>
                                                 <span data-dz-name></span>&nbsp;(<span data-dz-size></span>)
                                             </div>
-                                            <a href="#!" data-dz-remove><i class="lni-trash size-sm" style="color: #FF5722;"></i></a>
+                                            <a href="#!" data-dz-remove><i class="lni-trash size-sm"
+                                                                           style="color: #FF5722;"></i></a>
                                         </div>
                                         <!--                                                <div class="dz-error-message">Error: <span data-dz-errormessage></span></div>-->
                                     </div>
@@ -400,49 +408,90 @@
                             <form action="{% url 'survey' %}" method="post" id="quiz">
                                 {% csrf_token %}
                                 <div class="form-group row" style="margin-top: 20px">
-                                    <div class="col-sm-1">1.</div>
-                                    <div class="col-sm-10">
+                                    <div class="col-md-10">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="gridCheck1" name="response_1">
-                                            <label class="form-check-label" for="gridCheck1">
+                                            <label class="form-check-label" for="response_1">
                                                 Would you be interested on working with the Symbiosis Centre for Applied
                                                 AI (SCAAI)?
                                             </label>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="form-group row" style="margin-top: 20px">
-                                    <div class="col-sm-1">2.</div>
-                                    <div class="col-sm-10">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="gridCheck2" name="response_2">
-                                            <label class="form-check-label" for="gridCheck2">
-                                                Would you be interested to work with SCAAI in collaboration with Tata
-                                                Motors Ltd. to further develop the NLP based projects?
+                                    <div class="col-sm-2">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_1" id="option2" value="on" autocomplete="off">
+                                                Yes
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_1" id="option3" value="off" autocomplete="off">
+                                                No
                                             </label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group row" style="margin-top: 20px">
-                                    <div class="col-sm-1">3.</div>
                                     <div class="col-sm-10">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="gridCheck3" name="response_3">
+                                            <label class="form-check-label" for="response_2">
+                                                Would you be interested to work with SCAAI in collaboration with Tata
+                                                Motors Ltd. to further develop the NLP based projects?
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-2">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_2" id="option2" value="on" autocomplete="off">
+                                                Yes
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_2" id="option3" value="off" autocomplete="off">
+                                                No
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row" style="margin-top: 20px">
+                                    <div class="col-sm-10">
+                                        <div class="form-check">
                                             <label class="form-check-label" for="gridCheck3">
                                                 Would you be interested in converting your idea (this or otherwise) into
                                                 a startup?
                                             </label>
                                         </div>
                                     </div>
+                                    <div class="col-sm-2">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_3" id="option2" value="on" autocomplete="off">
+                                                Yes
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_3" id="option3" value="off" autocomplete="off">
+                                                No
+                                            </label>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group row" style="margin-top: 20px">
-                                    <div class="col-sm-1">4.</div>
                                     <div class="col-sm-10">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="gridCheck4" name="response_4">
                                             <label class="form-check-label" for="gridCheck4">
                                                 Would you be interested in registering your startup with Symbiosis
                                                 Centre of Entrepreneurship and Innovation Startup Incubator?
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_4" id="option2" value="on" autocomplete="off">
+                                                Yes
+                                            </label>
+                                            <label class="btn btn-secondary">
+                                                <input type="radio" name="response_4" id="option3" value="off" autocomplete="off">
+                                                No
                                             </label>
                                         </div>
                                     </div>
@@ -638,8 +687,7 @@
                 if (surveyStatus == 'False') {
                     showError("<big>Please fill the survey first.</big>");
                     return false;
-                }
-                else return true;
+                } else return true;
             }
 
             // Do on button press
