--- a/hackathon/webapp/templates/webapp/footer.html
+++ b/hackathon/webapp/templates/webapp/footer.html
@@ -29,7 +29,7 @@
 							<li><a href="{% url 'index' %}">Home</a></li>
 							<li><a href="{% url 'about_us' %}">About Us</a></li>
 							<li><a href="{% url 'contact_us' %}">Contact Us</a></li>
-							<li><a href="{% url 'registration' %}">Register</a></li>
+							<li><a href="{% url 'upload_solution' %}">Login</a></li>
 						</ul>
 					</div>
 				</div>
