--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -913,7 +913,7 @@
                                     <li><a href="#0" data-date="17/08/2019" style="left: 520px;"
                                            class="cd-h-timeline__date">17 Aug</a></li>
                                     <li><a href="#0" data-date="31/08/2019" style="left: 660px;"
-                                           class="cd-h-timeline__date">31 Aug</a></li>
+                                           class="cd-h-timeline__date">8 Sep</a></li>
                                     <li><a href="#0" data-date="27/09/2019" style="left: 800px;"
                                            class="cd-h-timeline__date">26 Sep</a></li>
                                     <li><a href="#0" data-date="27/09/2019" style="left: 940px;"
@@ -982,7 +982,7 @@
                                     <em class="cd-h-timeline__event-date">August 17th, 2019</em>
                                     <p class="cd-h-timeline__event-description color-contrast-medium timeline-custom timeline-center"
                                        id="timeline-content">
-                                        Selected teams will receive a problem statement via an email. They will have two
+                                        Selected teams will receive a problem statement via an email. They will have three
                                         weeks of time to think, deliberate and develop.
                                     </p>
                                 </div>
@@ -991,7 +991,7 @@
                             <li class="cd-h-timeline__event text-component">
                                 <div class="cd-h-timeline__event-content container">
                                     <h2 class="cd-h-timeline__event-title">E-Hackathon (Round 1 Ends)</h2>
-                                    <em class="cd-h-timeline__event-date">August 31st, 2019</em>
+                                    <em class="cd-h-timeline__event-date">September 8th, 2019</em>
                                     <p class="cd-h-timeline__event-description color-contrast-medium timeline-custom timeline-center"
                                        id="timeline-content">
                                         Last date to submit your solutions of the problem statement.
