--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -568,9 +568,9 @@
                 [DOCKERFILE]: 'Dockerfile',
                 [PROGRAM_FILE]: 'Python/Zip File',
                 [PPT]: 'PPT/PPTX File',
-
+	    };
 	   // Disable survey if already taken.
-	          if (checkForSurvey()) {
+	    if (checkForSurvey()) {
                 $('#survey-button').attr('disabled', 'disabled');
             }
 
@@ -934,6 +934,8 @@
                         alert("An error occured, please refresh the page.")
                     }
                 })
+		
+		alert(`${fileItem.name} uploaded.`);
             }
 
             function displayItems(fileItemList) {
