Minor changes from prod commited

--- a/hackathon/solutions/templates/solutions/upload_solution.html
+++ b/hackathon/solutions/templates/solutions/upload_solution.html
@@ -670,7 +670,7 @@
                 let zdrop = new Dropzone(target, {
                     url: 'some_url_here',
                     maxFiles: 1,
-                    {#maxFilesize: 30,#}
+                    maxFilesize: 9999999999999,
                     previewTemplate: previewTemplate,
                     previewsContainer: `${currentProblemId} #previews`,
                     clickable: `${currentProblemId} ${clickableIntermediary} #dropper-ind`,
